通常移動とブースト移動で回転速度を変えるように 魔法にダメージ量を持たせるように

--- a/DuelWitch.vcxproj
+++ b/DuelWitch.vcxproj
@@ -297,6 +297,7 @@
     <ClInclude Include="Sources\Game\Magic.h" />
     <ClInclude Include="Sources\Game\MagicFactory.h" />
     <ClInclude Include="Sources\Game\MagicID.h" />
+    <ClInclude Include="Sources\Game\MagicInfo.h" />
     <ClInclude Include="Sources\Game\MagicManager.h" />
     <ClInclude Include="Sources\Game\MoveCommand.h" />
     <ClInclude Include="Sources\Game\NormalMagicEffectEmitter.h" />
