--- a/DuelWitch.vcxproj
+++ b/DuelWitch.vcxproj
@@ -237,6 +237,7 @@
     <ClCompile Include="Sources\Game\Scene\LoseResultScene.cpp" />
     <ClCompile Include="Sources\Game\Scene\SceneManager.cpp" />
     <ClCompile Include="Sources\Game\Scene\TitleScene.cpp" />
+    <ClCompile Include="Sources\Game\Scene\WinResultScene.cpp" />
     <ClCompile Include="Sources\Game\UI\CharaIcon.cpp" />
     <ClCompile Include="Sources\Game\UI\CharaSelectMarker.cpp" />
     <ClCompile Include="Sources\Parameters\FuzzyParameter.cpp" />
@@ -348,6 +349,7 @@
     <ClInclude Include="Sources\Game\Scene\ShareData\ShareData.h" />
     <ClInclude Include="Sources\Game\Scene\TitleScene.h" />
     <ClInclude Include="Sources\Game\MyGame.h" />
+    <ClInclude Include="Sources\Game\Scene\WinResultScene.h" />
     <ClInclude Include="Sources\Game\UI\CharaIcon.h" />
     <ClInclude Include="Sources\Game\UI\CharaSelectMarker.h" />
     <ClInclude Include="Sources\Parameters\FuzzyParameter.h" />
